--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <input name="username"  type="text" placeholder="Email or phone number" />
         <input name="password" type="password" placeholder="Password" />
         <input type="submit" value="Log In" />
-        <a href="#">Find Kokoa Account or Password</a>
+        <a href="friends.html">Find Kokoa Account or Password</a>
     </form>
 
 
